# codentro

./: .codescope.toml.example  .entrota.toml  .gitignore  ACCURACY_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TESTING.md  TEST_SUMMARY.md
crates/codentro-adapters/: Cargo.toml
crates/codentro-adapters/src/: lib.rs  typescript.rs
crates/codentro-cli/: Cargo.toml
crates/codentro-cli/src/: cli.rs  main.rs  output.rs
crates/codentro-cli/src/cli/: view.rs
crates/codentro-core/: Cargo.toml
crates/codentro-core/src/: config.rs  metrics_test.rs
crates/codentro-core/src/rules/: function_size.rs
crates/codescope-adapters/: Cargo.toml
crates/codescope-adapters/src/: lib.rs  typescript.rs  typescript_test.rs
crates/codescope-cli/: Cargo.toml
crates/codescope-cli/src/: cli.rs  main.rs  output.rs
crates/codescope-cli/src/cli/: analyze.rs  init.rs  scan.rs  view.rs
crates/codescope-core/: Cargo.toml
crates/codescope-core/src/: config.rs  lib.rs  metrics.rs  metrics_test.rs  types.rs
crates/codescope-core/src/rules/: complexity.rs  coupling.rs  mod.rs
crates/entrota-adapters/: Cargo.toml
crates/entrota-adapters/src/: lib.rs  typescript.rs
crates/entrota-cli/: Cargo.toml
crates/entrota-cli/src/: cli.rs  output.rs
crates/entrota-cli/src/cli/: view.rs
crates/entrota-core/: Cargo.toml
crates/entrota-core/src/: cache.rs  discovery.rs  graph.rs  graph_test.rs  lib.rs  metrics.rs  metrics_test.rs  types.rs
crates/entrota-core/src/rules/: file_size.rs  mod.rs  structure_stats.rs
docs/: design-v0.1.md
examples/: complexity-demo.ts  sample.ts
scripts/: README.md  analyze-batch.ts
test-suite/: 01-arrow-functions.tsx  02-function-declarations.ts  03-class-methods.ts  04-function-expressions.ts  05-edge-cases.tsx  FINDINGS.md  README.md  TEST_RESULTS.md  run-tests.sh
