[workspace]
resolver = "2"
members = [
    "crates/codentro-core",
    "crates/codentro-adapters",
    "crates/codentro-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Graph
petgraph = "0.6"

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# CLI
clap = { version = "4.5", features = ["derive"] }
tabled = "0.16"

# File operations
walkdir = "2.5"
ignore = "0.4"

# Hashing & cache
blake3 = "1.5"

# Parallelism
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true
