[package]
name = "codentro-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "codentro"
path = "src/main.rs"

[dependencies]
codentro-core = { path = "../codentro-core" }
codentro-adapters = { path = "../codentro-adapters" }
anyhow.workspace = true
clap.workspace = true
tabled.workspace = true
serde_json.workspace = true
