[package]
name = "codescope-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "codescope"
path = "src/main.rs"

[dependencies]
codescope-core = { path = "../codescope-core" }
codescope-adapters = { path = "../codescope-adapters" }
anyhow.workspace = true
clap.workspace = true
tabled.workspace = true
serde_json.workspace = true
walkdir.workspace = true
ctrlc.workspace = true
