[package]
name = "entrota-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "entrota"
path = "src/main.rs"

[dependencies]
entrota-core = { path = "../entrota-core" }
entrota-adapters = { path = "../entrota-adapters" }
anyhow.workspace = true
clap.workspace = true
tabled.workspace = true
serde_json.workspace = true
