[package]
name = "entrota-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
walkdir.workspace = true
ignore.workspace = true
blake3.workspace = true
rayon.workspace = true
